new story submission feature added

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
   <div class="navbar-brand">
     <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
   </div>
+  <div class="main-nav-links hidden">
+    |
+    <a id="nav-submit-story" class="nav-link" href="#">submit</a>
+  </div>
   <div class="nav-right">
     <a class="nav-link" href="#" id="nav-login">login/signup</a>
     <a class="nav-link" href="#" id="nav-user-profile"></a>
@@ -46,6 +50,24 @@
 
 <!-- area for stories (all stories, user stories, favorites) -->
 <section class="stories-container container">
+
+  <!-- form for submitting new story -->
+  <form id="submit-story-form" class="hidden" action="">
+    <div>
+      <label for="create-author">author</label>
+      <input id="create-author" placeholder="Enter author name">
+    </div>
+    <div>
+      <label for="create-title">title</label>
+      <input id="create-title" placeholder="Enter story title">
+    </div>
+    <div>
+      <label for="create-url">url</label>
+      <input id="create-url" placeholder="Enter story url">
+    </div>
+    <button type="submit">submit</button>
+    <hr>
+  </form>
 
   <!-- loading message (removed by JS after stories loaded) -->
   <div id="stories-loading-msg">Loading&hellip;</div>
