favorite functionality and list added, removeStory dev in progress

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
   <div class="main-nav-links hidden">
     |
     <a id="nav-submit-story" class="nav-link" href="#">submit</a>
+    |
+    <a id="nav-favorites" class="nav-link" href="#">favorites</a>
+    |
+    <a id="nav-my-stories" class="nav-link" href="#">my stories</a>
   </div>
   <div class="nav-right">
     <a class="nav-link" href="#" id="nav-login">login/signup</a>
@@ -74,6 +78,12 @@
 
   <!-- List of all stories -->
   <ol id="all-stories-list" class="stories-list"></ol>
+
+  <!-- List favorite stories -->
+  <ol id="favorite-stories" class="stories-list"></ol>
+
+  <!-- List user stories -->
+  <ol id="user-stories" class="stories-list"></ol>
 
 </section>
 
