--- a/index.html
+++ b/index.html
@@ -126,6 +126,24 @@
     </div>
     <button type="submit">create account</button>
   </form>
+
+  <!-- Update User Profile form -->
+  <form action="#" id="update-user" class="account-form hidden" method="post">
+    <h4>User Profile</h4>
+    <div>
+      <b>Username: </b>
+    </div>
+    <div class="login-input">
+      <label for="login-username">username</label>
+      <input id="login-username" autocomplete="current-username">
+    </div>
+    <div class="login-input">
+      <label for="login-password">password</label>
+      <input id="login-password" type="password" autocomplete="current-password">
+    </div>
+    <button type="submit">login</button>
+    <hr>
+  </form>
 </section>
 
 <!-- Library JS & our JS -->
